--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "eslint": "^8.33.0",
     "eslint-config-next": "^13.4.7",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-unused-imports": "^2.0.0",
